# ghost-runner-core

./: .gitignore  config.toml.example  pyproject.toml  start-stack.sh  stop-stack.sh
skills/jp_calendar/: manifest.toml  skill.py
skills/text_stats/: manifest.toml  skill.py
src/ghost_runner_core/: __init__.py  binframe.py  config.py  envelope.py  main.py  store.py
src/ghost_runner_core/asr/: client.py
src/ghost_runner_core/llm/: client.py  scheduler.py
src/ghost_runner_core/orchestrator/: orchestrator.py  turns.py
src/ghost_runner_core/server/: session.py  ws_server.py
src/ghost_runner_core/skills/: library.py  sandbox.py
src/ghost_runner_core/tts/: __init__.py  client.py  irodori.py
src/ghost_runner_core/voice/: __init__.py  chunker.py  tts_pipeline.py
tests/: test_asr_client.py  test_binframe.py  test_envelope.py  test_integration.py  test_scheduler.py  test_skills.py  test_store_and_replay.py  test_tts_client.py  test_tts_irodori.py  test_tts_pipeline.py  test_tts_pipeline_slicing.py  test_voice_chunker.py
tools/: design_voice.py  fish_sample_voices.py  promote_voice.py
